src/components/BookCollection/BookCollection.css
.book-collection-main-div {
  min-height: 81.5vh;
  position: relative;
}

.all-books {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(204px, 206.6px));
  column-gap: 1vw;
  row-gap: 2vw;
  flex-direction: column;
  padding-bottom: 110px;
}

.card {
  width: 204px;
  height: 372px;
  color: black;
  border: black;
  border-style: solid;
}

.pagination-div {
  margin-top: 60px;
  display: flex;
  justify-content: center;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.pagination-box {
  width: 140px;
  height: 96px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0px;
}

.pagination-progress {
  width: 140px;
  height: 34px;
  padding: 0px;
}

.pagination-progress p {
  width: 110px;
  height: 18px;
  text-align: center;
  color: #686868;
  margin: 0px 15px 12px 15px;

  font-size: 12px;
  line-height: 18px;
}

.pagination-progress span {
  background-color: #c4c4c4;
  height: 1px;
  border-radius: 2px;
}

.MuiLinearProgress-root span {
  background-color: #000000;
  width: 100%;
  border-radius: 2px;
}

.MuiButtonBase-root.MuiButton-root {
  height: 37px;
  width: 140px;
  color: black;
  border: 1px solid #000000;
  box-sizing: border-box;

  text-transform: none;

  box-shadow: 0px 0px 0px 2px #f7f7f9;
  border-radius: 20px;

  margin: 24px 0px;
}

.MuiButtonBase-root.MuiButton-root:hover {
  border: 1px solid #000000;
}

